--- a/src/app/watchshop/cart/cart-item/cart-item.component.html
+++ b/src/app/watchshop/cart/cart-item/cart-item.component.html
@@ -1,4 +1,6 @@
 <!-- <p>cart-item works!</p> -->
 <div class="cart-item">
-<span>Item 1</span>x<span>3</span>:<strong>{{ 1500 | currency:'INR'}}</strong>
+<span>{{ cartItem.productName }}</span> x
+<span>{{ cartItem.qty }} </span>:
+<strong>{{ (cartItem.qty * cartItem.price) | currency:'INR'}}</strong>
 </div>
