--- a/src/app/watchshop/product-list/product-item/product-item.component.html
+++ b/src/app/watchshop/product-list/product-item/product-item.component.html
@@ -1,21 +1,27 @@
 <!-- <p>product-item works!</p> -->
 
 <div class="card mb-4 shadow-sm">
-    <img class="bd-placeholder-img card-img-top" width="100%" src="https://fossil.scene7.com/is/image/FossilPartners/FS5305_main?$sfcc_fos_hi-res$">
+    <img class="bd-placeholder-img card-img-top p-2" width="100%"
+    src="https://fossil.scene7.com/is/image/FossilPartners/FS5305_main?$sfcc_fos_hi-res$"/>
+    
     
     <div class="card-body">
-      <strong>{{ 1500 | currency:"INR" }}</strong>
-      <p class="card-text">Fosil The Minimallist 
-        Slim Three-Hand Light Brown Leather Watch.
-       type:Brown-FS5305
-      Warranty:1Year.
-
+      <p class ="card-text">
+      <strong>{{ productItem.price | currency:"INR" }}</strong>
+      <i *ngIf="addedToWishlist" class="fas fa-heart float-right" (click)="handleRemoveFromWishlist()"></i>
+      <i *ngIf="!addedToWishlist" class="far fa-heart float-right"(click)="handleAddToWishlist()"></i>
       </p>
+      <p class="card-text">{{productItem.description  | slice:0:60 }}</p>
+      
+      
       <div class="d-flex justify-content-between align-items-center">
         <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-primary product-btn">Add to Cart</button>&nbsp;&nbsp;
+          <button
+           type="button" class="btn btn-sm btn-primary product-btn" (click)="handleAddToCart()">Add to Cart</button>&nbsp;&nbsp;
           <button type="button" class="btn btn-sm btn-outline-secondary product-btn">view Details</button>
         </div>
-       
+       </div>
+
       </div>
     </div>
+    
