--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -5,12 +5,12 @@
    
 
     <nav class="my-2 my-md-2 mr-md-3">
-      <a class="p-2 text-dark"  href="#">Home</a>
+      <a class="p-2 text-dark"  [routerLink]="['/shop']">Shop</a>
       <a class="p-2 text-dark" href="#">Enterprise</a>
       <a class="p-2 text-dark" href="#">Support</a>
       <a class="p-2 text-dark" href="#">Pricing</a>
     </nav>
-    <a class="btn btn-outline-primary" href="#">Login</a>&nbsp;&nbsp;
-    <a class="btn btn-outline-primary" href="#">Sign up</a>&nbsp;&nbsp;
+    <a class="btn btn-outline-primary" [routerLink]="['/register']">Sign up</a>&nbsp;&nbsp;
+    <a class="btn btn-outline-secondary" [routerLink]="['/login']">Login</a>&nbsp;&nbsp;
   </div>
   
